--- a/css/slider.css
+++ b/css/slider.css
@@ -5,7 +5,9 @@
 .slider4 .slick-next:before,
 .slider4 .slick-prev:before,
 .slider5 .slick-next:before,
-.slider5 .slick-prev:before {
+.slider5 .slick-prev:before,
+.slider6 .slick-next:before,
+.slider6 .slick-prev:before {
   font-family: "fontawesome";
   font-size: var(--font-size30);
   color: var(--pure-white) !important;
@@ -22,14 +24,17 @@
 .slider2 .slick-next:hover:before,
 .slider2 .slick-prev:hover:before,
 .slider4 .slick-next:hover:before,
-.slider4 .slick-prev:hover:before {
+.slider4 .slick-prev:hover:before,
+.slider6 .slick-next:hover:before,
+.slider6 .slick-prev:hover:before {
   left: 55%;
 }
 
 .slider .slick-next,
 .slider2 .slick-next,
 .slider4 .slick-next,
-.slider5 .slick-next {
+.slider5 .slick-next,
+.slider6 .slick-next {
   right: -43px !important;
   top: 10px;
   background: var(--dark-blue-op) !important;
@@ -45,7 +50,8 @@
 .slider .slick-next:hover,
 .slider2 .slick-next:hover,
 .slider4 .slick-next:hover,
-.slider5 .slick-next:hover {
+.slider5 .slick-next:hover,
+.slider6 .slick-next:hover {
   background: var(--red-main) !important;
 }
 
@@ -64,7 +70,8 @@
 .slider .slick-prev,
 .slider2 .slick-prev,
 .slider4 .slick-prev,
-.slider5 .slick-prev {
+.slider5 .slick-prev,
+.slider6 .slick-prev {
   left: -43px !important;
   background: var(--dark-blue-op) !important;
   box-shadow: var(--box-shadow) !important;
@@ -82,7 +89,8 @@
 .slider .slick-prev:hover,
 .slider2 .slick-prev:hover,
 .slider4 .slick-prev:hover,
-.slider5 .slick-prev:hover {
+.slider5 .slick-prev:hover,
+.slider6 .slick-prev:hover {
   background: var(--red-main) !important;
 }
 
@@ -101,4 +109,14 @@
 
 .slider5 .slick-prev {
   top: 170px;
+}
+/* slider5 specific */
+.slider6 .slick-next {
+  top: 200px;
+  left: 97%;
+}
+
+.slider6 .slick-prev {
+  top: 200px;
+  left: -6px !important;
 }
